# dynamo

./: .coderabbit.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS-Go.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  ATTRIBUTIONS-container-tensorrtllm-runtime.txt  ATTRIBUTIONS.md  CODEOWNERS  Cargo.toml  Earthfile  README.md  deny.toml  hatch_build.py  launch.sh  pyproject.toml  support_matrix.md
.cargo/: config.toml
launch/dynamo-run/: Cargo.toml  build.rs
launch/dynamo-run/src/: flags.rs  lib.rs  main.rs  opt.rs  subprocess.rs
launch/dynamo-run/src/input/: batch.rs  common.rs  endpoint.rs  http.rs  text.rs
launch/dynamo-run/src/subprocess/: sglang.rs  sglang_inc.py  trtllm.rs  trtllm_inc.py  vllm.rs  vllm_inc.py  vllm_v1_inc.py
launch/dynamo-run/src/subprocess/trtllm/: publishers.py
launch/dynamo-run/src/subprocess/trtllm_config/: sample.yaml
lib/async-openai/: Cargo.toml
lib/async-openai-macros/: Cargo.toml
lib/async-openai-macros/src/: lib.rs
lib/async-openai/src/: assistants.rs  audio.rs  audit_logs.rs  batches.rs  chat.rs  client.rs  completion.rs  config.rs  download.rs  embedding.rs  error.rs  file.rs  fine_tuning.rs  image.rs  invites.rs  lib.rs  messages.rs  model.rs  moderation.rs  project_api_keys.rs  project_service_accounts.rs  project_users.rs  projects.rs  responses.rs  runs.rs  steps.rs  threads.rs  traits.rs  uploads.rs  users.rs  util.rs  vector_store_file_batches.rs  vector_store_files.rs  vector_stores.rs
lib/async-openai/src/types/: assistant.rs  assistant_impls.rs  assistant_stream.rs  audio.rs  audit_log.rs  batch.rs  chat.rs  common.rs  completion.rs  embedding.rs  file.rs  fine_tuning.rs  image.rs  impls.rs  invites.rs  message.rs  mod.rs  model.rs  moderation.rs  project_api_key.rs  project_service_account.rs  project_users.rs  projects.rs  responses.rs  run.rs  step.rs  thread.rs  upload.rs  users.rs  vector_store.rs
lib/async-openai/src/types/realtime/: client_event.rs  content_part.rs  conversation.rs  error.rs  item.rs  mod.rs  rate_limit.rs  response_resource.rs  server_event.rs  session_resource.rs
lib/async-openai/tests/: bring-your-own-type.rs  completion.rs  embeddings.rs  ser_de.rs  whisper.rs
lib/engines/llamacpp/: Cargo.toml
lib/engines/llamacpp/src/: lib.rs
lib/llm/: Cargo.toml  build.rs
lib/llm/benches/: tokenizer.rs
lib/llm/src/: backend.rs  block_manager.rs  common.rs  cuda.rs  disagg_router.rs  discovery.rs  endpoint_type.rs  engines.rs  entrypoint.rs  gguf.rs  grpc.rs  http.rs  hub.rs  key_value_store.rs  kv_router.rs  lib.rs  local_model.rs  migration.rs  mocker.rs  model_card.rs  model_type.rs  perf.rs  preprocessor.rs  protocols.rs  recorder.rs  request_template.rs  tokenizers.rs  tokens.rs  types.rs
lib/llm/src/block_manager/: block.rs  config.rs  connector.rs  controller.rs  distributed.rs  events.rs  layout.rs  metrics.rs  metrics_kvbm.rs  offload.rs  pool.rs  state.rs  storage.rs
lib/llm/src/block_manager/block/: data.rs  factory.rs  locality.rs  registry.rs  state.rs  transfer.rs  view.rs
lib/llm/src/block_manager/connector/: protocol.rs  scheduler.rs
lib/llm/src/block_manager/controller/: client.rs  handler.rs
lib/llm/src/block_manager/distributed/: leader.rs  transfer.rs  utils.rs  worker.rs  zmq.rs
lib/llm/src/block_manager/events/: dynamo.rs
lib/llm/src/block_manager/layout/: nixl.rs  utils.rs
lib/llm/src/block_manager/offload/: pending.rs  request.rs
lib/llm/src/block_manager/pool/: active.rs  inactive.rs  managed.rs  state.rs
lib/llm/src/block_manager/state/: local.rs  logical.rs  resources.rs
lib/llm/src/block_manager/storage/: arena.rs  cuda.rs  disk.rs  nixl.rs  torch.rs
lib/llm/src/common/: dtype.rs
lib/llm/src/discovery/: model_entry.rs  model_manager.rs  watcher.rs
lib/llm/src/entrypoint/: input.rs
lib/llm/src/entrypoint/input/: batch.rs  common.rs  endpoint.rs  grpc.rs  http.rs  text.rs
lib/llm/src/gguf/: content.rs  gguf_metadata.rs  gguf_tokenizer.rs
lib/llm/src/grpc/: service.rs
lib/llm/src/grpc/protos/: kserve.proto  model_config.proto
lib/llm/src/grpc/service/: kserve.rs  openai.rs
lib/llm/src/http/: client.rs  service.rs
lib/llm/src/http/service/: clear_kv_blocks.rs  disconnect.rs  discovery.rs  error.rs  health.rs  metrics.rs  openai.rs  service_v2.rs
lib/llm/src/key_value_store/: etcd.rs  nats.rs
lib/llm/src/kv/: storage.rs
lib/llm/src/kv_router/: approx.rs  indexer.rs  metrics_aggregator.rs  prefill_counter.rs  protocols.rs  publisher.rs  scheduler.rs  scoring.rs  sequence.rs
lib/llm/src/local_model/: network_name.rs  runtime_config.rs
lib/llm/src/mocker/: engine.rs  evictor.rs  kv_manager.rs  protocols.rs  scheduler.rs  sequence.rs
lib/llm/src/model_card/: create.rs  model.rs
lib/llm/src/perf/: logprobs.rs
lib/llm/src/postprocessor/: mod.rs  reasoning_parser.rs
lib/llm/src/postprocessor/tool_calling/: json_parser.rs  mod.rs  parsers.rs  tools.rs
lib/llm/src/preprocessor/: prompt.rs  tools.rs
lib/llm/src/preprocessor/prompt/: template.rs
lib/llm/src/preprocessor/tools/: mod.rs  request.rs
lib/llm/src/protocols/: codec.rs  common.rs  openai.rs
lib/llm/src/tokenizers/: hf.rs  sp.rs
lib/llm/src/tokens/: blocks.rs
lib/llm/tests/: aggregators.rs  backend.rs  block_manager.rs  http-service.rs  http_metrics.rs  kserve_service.rs  logprob_analysis_integration.rs  model_card.rs  openai_completions.rs  preprocessor.rs  test_common_ext.rs  tokenizers.rs
lib/llm/tests/common/: ports.rs
lib/llm/tests/snapshots/: preprocessor__mulit_turn_with_system@meta-llama_llama-3_1-70b-instruct--1605565.snap  preprocessor__mulit_turn_without_system@meta-llama_llama-3_1-70b-instruct--1605565.snap  preprocessor__multi_turn_with_continuation@meta-llama_llama-3_1-70b-instruct--1605565.snap  preprocessor__multi_turn_with_system_with_tools@meta-llama_llama-3_1-70b-instruct--1605565.snap  preprocessor__single_turn@meta-llama_llama-3_1-70b-instruct--1605565.snap  preprocessor__single_turn_with_tools@meta-llama_llama-3_1-70b-instruct--1605565.snap
lib/runtime/examples/system_metrics/: Cargo.toml  README.md
(+1303 files in other folders)
