# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dynamo-engine-llamacpp"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]
openmp = ["llama-cpp-2/openmp"]
# We cannot link libllama into a `.so`, so the bindings need this
dynamic-link = ["llama-cpp-2/dynamic-link"]

[dependencies]
dynamo-runtime = { workspace = true }
dynamo-llm = { workspace = true }

async-stream = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# default-features = false to disable openmp because that needs libgomp1 installed
llama-cpp-2 = { version = "0.1.107", default-features = false }
