# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "system_metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
integration = [] # Integration tests that require NATS

[dependencies]
anyhow = "*"
dynamo-runtime = { workspace = true }

# third-party
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
prometheus = { version = "0.14" }

[dev-dependencies]
rand = { version = "0.9.0" }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-test = "0.4.4"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["integration"]
